Mon Oct 20 12:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_stdlib.{h,inl}:
          Added atof and atol wrappers

Mon Oct 20 07:23:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * contrib/FaCE/FaCENOACE.mpc:
          Derive from vc_warnings to get rid of deprecated warnings

Mon Oct 20 03:30:20 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/config-cygwin32.h (ACE_HAS_CUSTOM_EXPORT_MACROS): Changed this
          macro definition to

          #define ACE_HAS_CUSTOM_EXPORT_MACROS 1

          Thanks to E Vahala <erkki.vahala@pp.inet.fi>

Sun Oct 19 06:57:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Network_Adapters_Test.cpp:
          WinCE doesn't have control handler

Sun Oct 19 06:54:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Service_Config_Test.cpp:
          WinCE doesn't have _beginthreadex

Sun Oct 19 06:53:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Logging_Strategy_Test.cpp:
          Removed WinCE specific code which is not needed anymore

Fri Oct 17 19:33:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          Set lzo2 to 0 as default

Fri Oct 17 19:25:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_stat.inl:
          Reapplied a change from yesterday, seems the repo has an issue

Fri Oct 17 18:57:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/OrdMultiSet_Test.cpp:
          Use ACE_TEST_ASSERT instead of ACE_ASSERT

        * tests/Vector_Test.cpp:
          Removed BCB6/BCB2006 support

        * tests/SOCK_Connector_Test.cpp:
          Const change and initailise pointer with 0

Fri Oct 17 12:14:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux-common.h:
        * ace/config-win32-borland.h:
        * ace/Guard_T.h:
        * ace/Handle_Set.cpp: