@@ -1,3 +1,11 @@
+Mon Oct 20 13:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * bin/fuzz.pl:
+          Extended ACE_OS check with atof/atol/raise
+
+        * apps/JAWS3/bench/rqfiles.cpp:
+          Use ACE_OS::atof
+
 Mon Oct 20 12:01:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/OS_NS_stdlib.{h,inl}:
